Handle compressed sync data from Sync Clippings Helper (issue #434)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -116,7 +116,7 @@ fieldset {
     border-bottom: 0;
     border-left: 0;
     padding-top: 4px;
-    padding-bottom: 18px;
+    padding-bottom: 12px;
 }
 
 legend {
@@ -163,10 +163,6 @@ progress {
 
 .description {
     font-size: 13px;
-}
-
-.example {
-    font-size: 11px;
 }
 
 #html-paste-options-ctr {
@@ -480,8 +476,8 @@ body[data-locale|="es"] #wnds-dlgs-opts-dlg #clpmgr-save-wnd-pos-label {
 
 #sync-clippings-dlg {
     top: 128px;
-    --width: 500px;
-    --height: 256px;
+    --width: 530px;
+    --height: 270px;
 }
 
 body[data-os="mac"] #sync-clippings-dlg {
@@ -489,26 +485,42 @@ body[data-os="mac"] #sync-clippings-dlg {
 }
 
 body[data-locale="de"] #sync-clippings-dlg {
-    --width: 570px;
+    --width: 600px;
 }
 
 body[data-locale|="es"] #sync-clippings-dlg {
-    --width: 620px;
+    --width: 650px;
 }
 
 body[data-locale="nl"] #sync-clippings-dlg,
 body[data-locale="uk"] #sync-clippings-dlg {
-    --width: 522px;
+    --width: 552px;
+}
+
+#sync-clippings-dlg.expanded {
+    height: 300px;
 }
 
 #sync-clippings-dlg fieldset {
     margin-top: 14px;
     margin-left: 0;
     padding-right: 0;
+    border-bottom: 1px solid var(--color-fieldset-border);
 }
 
 #sync-clippings-dlg fieldset legend {
     padding-left: 0;
+}
+
+#sync-clippings-dlg input[type="checkbox"] ~ label {
+    font-size: 15px;
+}
+
+#sync-clippings-dlg #cmprs-sync-data-reqmt {
+    display: none;
+    font-size: 13px;
+    margin-top: 2px;
+    margin-left: 27px;
 }
 
 #sync-clippings-dlg #sync-cxn-error .msgbox-icon,
@@ -663,10 +675,9 @@ body[data-os="mac"] #turn-off-sync-clippings-dlg .msgbox-icon {
     margin-left: 74px;
 }
 
-#sync-clippings-dlg input[type="checkbox"] + label,
 #turn-off-sync-clippings-ack-dlg #delete-sync-fldr-opt > #delete-sync-fldr + label {
     font-size: 13px;
-    vertical-align: baseline;   
+    vertical-align: unset;
 }
 
 body[data-os="win"] #sync-clippings-dlg input[type="checkbox"] + label,
